test/valid/builtins/Number.js
var x = Number(123);
x = 2;
x = Number({});
x = Number('a');
x = Number(NaN);
x = Number([]);
x = Number(null);
x = Number(false);
