test/invalid/for-1.js
var z = false;
var i = 0;
for (i = 2; i; i = 3) {
    z = i;
}
